--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,6 +108,13 @@
   margin-left: 0.5rem;
 }
 
+.th {
+  background: #4299e1;
+  position: sticky;
+  top: 0; /* Don't forget this, required for the stickiness */
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
